// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<link> 要素が2つ以上存在するとき > 有効な Profile Set が得られる 1`] = `
[
  {
    "@context": "https://originator-profile.org/context.jsonld",
    "profiles": "{Signed Document Profile または Signed Originator Profile}",
  },
  {
    "@context": "https://originator-profile.org/context.jsonld",
    "profiles": "{別の Signed Document Profile または Signed Originator Profile}",
  },
]
`;

exports[`<script>要素から Profile Set を取得する > <script> から profile set を取得できる 1`] = `
[
  {
    "@context": "https://originator-profile.org/context.jsonld",
    "main": [
      "https://example.org",
    ],
    "profile": [
      "{Signed Document Profile または Signed Originator Profile}",
    ],
  },
]
`;

exports[`<script>要素から Profile Set を取得する > <script> が2つ以上存在する 1`] = `
[
  {
    "@context": "https://originator-profile.org/context.jsonld",
    "main": [
      "https://example.org",
    ],
    "profile": [
      "{Signed Document Profile または Signed Originator Profile}",
    ],
  },
  {
    "@context": "https://originator-profile.org/context.jsonld",
    "main": [
      "https://example.org",
    ],
    "profile": [
      "{Signed Document Profile または Signed Originator Profile}",
    ],
  },
]
`;

exports[`<script>要素から Profile Set を取得する > <script> と <link> から profile set を取得できる 1`] = `
[
  {
    "@context": "https://originator-profile.org/context.jsonld",
    "main": [
      "https://example.org",
    ],
    "profile": [
      "{Signed Document Profile または Signed Originator Profile}",
    ],
  },
  {
    "@context": "https://originator-profile.org/context.jsonld",
    "main": [
      "https://example.com",
    ],
    "profile": [
      "{Signed Document Profile または Signed Originator Profile}",
      "{Signed Document Profile または Signed Originator Profile}",
    ],
  },
]
`;

exports[`<script>要素から Web Assertion Set を取得する > <script> から Web Assertion Set を取得できる 1`] = `
[
  {
    "@context": "https://originator-profile.org/context.jsonld",
    "main": [
      "https://example.org",
    ],
    "profile": [
      "{Signed Document Profile または Signed Originator Profile}",
    ],
  },
]
`;

exports[`<script>要素から Web Assertion Set を取得する > <script> が2つ以上存在する 1`] = `
[
  {
    "@context": "https://originator-profile.org/context.jsonld",
    "main": [
      "https://example.org",
    ],
    "profile": [
      "{Signed Document Profile または Signed Originator Profile}",
    ],
  },
  {
    "@context": "https://originator-profile.org/context.jsonld",
    "main": [
      "https://example.org",
    ],
    "profile": [
      "{Signed Document Profile または Signed Originator Profile}",
    ],
  },
]
`;
